--- a/index.html
+++ b/index.html
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Client</title>
-    <style>
-        #chat-box {
-            width: 100%;
-            height: 80vh;
-            overflow-y: scroll;
-        }
-    </style>
-</head>
-<body>
-    <div id="chat-box"></div>
-    <input type="text" id="message-input" placeholder="Type your message">
-    <button id="send-button">Send</button>
-
+<html>
+  <head>
+    <title>WebSocket Chat</title>
+  </head>
+  <body>
+    <div id="messages"></div>
+    <form onsubmit="sendMessage(event)">
+      <input type="text" id="messageInput" autocomplete="off" placeholder="Type your message here" />
+      <button>Send</button>
+    </form>
     <script>
-        const chatBox = document.getElementById('chat-box');
-        const messageInput = document.getElementById('message-input');
-        const sendButton = document.getElementById('send-button');
+      const webSocket = new WebSocket(`ws://${window.location.hostname}:8080/ws`);
 
-        const ws = new WebSocket('wss://steadfast-sulfuric-ground.glitch.me/ws');
+      function sendMessage(event) {
+        event.preventDefault();
+        const messageInput = document.getElementById('messageInput');
+        const message = messageInput.value.trim();
+        if (message) {
+          webSocket.send(message);
+        }
+        messageInput.value = '';
+      }
 
-        ws.onmessage = (event) => {
-            const message = document.createElement('p');
-            message.textContent = event.data;
-            chatBox.appendChild(message);
-            chatBox.scrollTop = chatBox.scrollHeight;
-        };
+      function addMessage(message) {
+        const messagesDiv = document.getElementById('messages');
+        const messageDiv = document.createElement('div');
+        messageDiv.textContent = message;
+        messagesDiv.appendChild(messageDiv);
+      }
 
-        sendButton.onclick = () => {
-            const message = messageInput.value.trim();
-            if (message) {
-                ws.send(message);
-                messageInput.value = '';
-            }
-        };
-
-        messageInput.addEventListener('keyup', (event) => {
-            if (event.key === 'Enter') {
-                sendButton.click();
-            }
-        });
+      webSocket.onmessage = (event) => {
+        const message = event.data;
+        addMessage(message);
+      };
     </script>
-</body>
+  </body>
 </html>
